--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,8 @@
 *.sublime-workspace
 
 # Visual Studio Code
-*.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+*.vscode/
+*.history/
 
 # Miscellaneous
 */.angular/cache/
